--- a/src/meson.build
+++ b/src/meson.build
@@ -7,12 +7,12 @@ numa = cxx.find_library('libnuma')
 deps = [libpmem, spdlog, numa, tbb]
 cpp_args = ['-march=native']
 
-main = executable('main',
-           'main.cpp',
+pmem_dram_migration = executable('pmem_dram_migration',
+           'pmem_dram_migration.cpp',
            include_directories: include,
            dependencies: deps,
            cpp_args: cpp_args)
-test('main', main)
+test('pmem_dram_migration', pmem_dram_migration)
 
 
 bigmem = executable('bigmem',
@@ -20,5 +20,4 @@ bigmem = executable('bigmem',
            include_directories: include,
            dependencies: deps,
            cpp_args: cpp_args)
-
 # test('bigmem', bigmem)
