--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -38,6 +38,24 @@
 			"dependsOn": [
 				"Meson: Build all targets"
 			]
+		},
+		{
+			"type": "shell",
+			"command": "objdump --disassemble-all --source --demangle ${workspaceFolder}/builddir/${relativeFileDirname}/${fileBasenameNoExtension} > ${workspaceFolder}/builddir/${relativeFileDirname}/${fileBasenameNoExtension}.S && code ${workspaceFolder}/builddir/${relativeFileDirname}/${fileBasenameNoExtension}.S",
+			"group": "none",
+			"presentation": {
+				"echo": true,
+				"reveal": "always",
+				"focus": false,
+				"panel": "shared",
+				"showReuseMessage": true,
+				"clear": false
+			},
+			"problemMatcher": [],
+			"label": "View assembly of active file",
+			"dependsOn": [
+				"Meson: Build all targets"
+			]
 		}
 	]
 }
